Nice display page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "moduleResolution": "bundler",
     "target": "es2022",
+    "module": "es2022",
     "declaration": true,
     "allowJs": true,
     "skipLibCheck": true,
