--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@codemirror/lang-javascript": "^6.2.3",
+    "@codemirror/language": "^6.10.8",
+    "@codemirror/legacy-modes": "^6.4.3",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/view": "^6.36.2",
     "@types/node": "^22.13.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "codemirror": "^6.0.1",
     "jsdom": "^26.0.0",
     "mobx": "^6.13.6",
     "mobx-react": "^9.2.0",
