--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,11 @@ on: [push]
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
+    permissions:
+      pages: write
+      id-token: write
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -15,7 +20,8 @@ jobs:
         uses: cognitive-engineering-lab/depot/actions/install@main
       - name: Build
         run: depot build --release
-      - uses: peaceiris/actions-gh-pages@v3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: dist/client
+          path: dist
+      - uses: actions/deploy-pages@v4        
